[refactor] Use isEmpty() where possible
    pick a348f07a98 [refactor] Java7: use line separator call
    pick 63635ea76e [refactor] Use isEmpty() where possible