@@ -64,14 +64,14 @@ public class ConcurrentXUpdateTest extends ConcurrentTestBase {
 		//String query0 = "doc('" + DBBroker.ROOT_COLLECTION + "/C1/R1.xml')/ROOT-ELEMENT//ELEMENT-1[@attribute-3]";
 		//String query1 = "/ROOT-ELEMENT//ELEMENT-2[@attribute-2]";
 
-		return Arrays.asList(
-				new Runner(new RemoveAppendAction(XmldbURI.LOCAL_DB + "/C1", "R1.xml", wordList), 50, 0, 100)
-				//new Runner(new RemoveAppendAction(getUri + "/C1", "R1.xml", wordList), 50, 100, 200);
-				//new Runner(new MultiResourcesAction("samples/mods", getUri + "/C1"), 1, 0, 300);
-				//new Runner(new RetrieveResourceAction(getUri + "/C1", "R1.xml"), 10, 1000, 2000);
-				//new Runner(new XQueryAction(getUri + "/C1", "R1.xml", query0), 100, 100, 100);
-				//new Runner(new XQueryAction(getUri + "/C1", "R1.xml", query1), 100, 200, 100);
-		);
+		return List.of(
+                new Runner(new RemoveAppendAction(XmldbURI.LOCAL_DB + "/C1", "R1.xml", wordList), 50, 0, 100)
+                //new Runner(new RemoveAppendAction(getUri + "/C1", "R1.xml", wordList), 50, 100, 200);
+                //new Runner(new MultiResourcesAction("samples/mods", getUri + "/C1"), 1, 0, 300);
+                //new Runner(new RetrieveResourceAction(getUri + "/C1", "R1.xml"), 10, 1000, 2000);
+                //new Runner(new XQueryAction(getUri + "/C1", "R1.xml", query0), 100, 100, 100);
+                //new Runner(new XQueryAction(getUri + "/C1", "R1.xml", query1), 100, 200, 100);
+        );
 	}
 
 	@Before
