@@ -28,6 +28,7 @@ import org.exist.xquery.XPathException;
 import org.junit.Test;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.easymock.EasyMock.createMock;
 import static org.easymock.EasyMock.expect;
@@ -103,7 +104,7 @@ public class OrderedValueSequenceTest {
         expect(mockSortExpr.eval(null, null)).andReturn(Sequence.EMPTY_SEQUENCE).anyTimes();
         replay(mockSortExpr);
 
-        final OrderedValueSequence orderedValueSequence = new OrderedValueSequence(Arrays.asList(new OrderSpec(null, mockSortExpr)), size);
+        final OrderedValueSequence orderedValueSequence = new OrderedValueSequence(List.of(new OrderSpec(null, mockSortExpr)), size);
         for (int i = 0; i < size; i++) {
             final Item item = createMock(Item.class);
             expect(item.getType()).andReturn(Type.ANY_TYPE);
